@startuml

title __VALIDATION's Class Diagram__\n

  namespace ru.training.karaf.rest {
    namespace validation {
      interface ru.training.karaf.rest.validation.UniqueKey {
          {abstract} + field()
          {abstract} + groups()
          {abstract} + message()
          {abstract} + payload()
      }
    }
  }
  

  namespace ru.training.karaf.rest {
    namespace validation {
      interface ru.training.karaf.rest.validation.UniqueKey.List {
          {abstract} + value()
      }
    }
  }
  

  namespace ru.training.karaf.rest {
    namespace validation {
      class ru.training.karaf.rest.validation.UniqueKeyValidatorImpl {
          + UniqueKeyValidatorImpl()
          + initialize()
          + isValid()
          + setRepo()
      }
    }
  }
  

  ru.training.karaf.rest.validation.UniqueKey +-down- ru.training.karaf.rest.validation.UniqueKey.List
  ru.training.karaf.rest.validation.UniqueKeyValidatorImpl .up.|> javax.validation.ConstraintValidator
  ru.training.karaf.rest.validation.UniqueKeyValidatorImpl o-- ru.training.karaf.repo.UniqueValidationRepo : repo
  ru.training.karaf.rest.validation.UniqueKeyValidatorImpl o-- ru.training.karaf.rest.validation.UniqueKey : uniqueKey


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
